crates/core/tests/snapshots/container_type_test__partial_type__named_struct__inherits_container_visibility_but_not_the_fields.snap
---
source: crates/core/tests/container_type_test.rs
expression: pretty(container.impl_partial_type())
---
#[derive(Clone, Debug, Default, PartialEq, serde::Deserialize, serde::Serialize)]
#[serde(default, deny_unknown_fields)]
pub(crate) struct PartialExample {
    #[serde(skip_serializing_if = "Option::is_none")]
    pub a: Option<bool>,
    #[serde(skip_serializing_if = "Option::is_none")]
    pub b: Option<bool>,
    #[serde(skip_serializing_if = "Option::is_none")]
    pub c: Option<bool>,
}
