crates/core/tests/snapshots/container_type_test__partial_type__named_struct__strips_wrappers.snap
---
source: crates/core/tests/container_type_test.rs
expression: pretty(container.impl_partial_type())
---
#[derive(Clone, Debug, Default, PartialEq, serde::Deserialize, serde::Serialize)]
#[serde(default, deny_unknown_fields)]
struct PartialExample {
    #[serde(skip_serializing_if = "Option::is_none")]
    a: Option<String>,
    #[serde(skip_serializing_if = "Option::is_none")]
    b: Option<usize>,
    #[serde(skip_serializing_if = "Option::is_none")]
    c: Option<bool>,
    #[serde(skip_serializing_if = "Option::is_none")]
    d: Option<String>,
    #[serde(skip_serializing_if = "Option::is_none")]
    e: Option<Vec<String>>,
    #[serde(skip_serializing_if = "Option::is_none")]
    f: Option<Vec<String>>,
    #[serde(skip_serializing_if = "Option::is_none")]
    g: Option<usize>,
    #[serde(skip_serializing_if = "Option::is_none")]
    h: Option<HashMap<String, usize>>,
    #[serde(skip_serializing_if = "Option::is_none")]
    i: Option<Box<str>>,
    #[serde(skip_serializing_if = "Option::is_none")]
    j: Option<Arc<str>>,
    #[serde(skip_serializing_if = "Option::is_none")]
    k: Option<Box<[u8]>>,
    #[serde(skip_serializing_if = "Option::is_none")]
    l: Option<String>,
}
