crates/core/tests/snapshots/container_type_test__partial_type__named_struct__strips_wrappers_around_nested.snap
---
source: crates/core/tests/container_type_test.rs
expression: pretty(container.impl_partial_type())
---
#[derive(Clone, Debug, Default, PartialEq, serde::Deserialize, serde::Serialize)]
#[serde(default, deny_unknown_fields)]
struct PartialExample {
    #[serde(skip_serializing_if = "Option::is_none")]
    a: Option<<NestedConfig as schematic::Config>::Partial>,
    #[serde(skip_serializing_if = "Option::is_none")]
    b: Option<<NestedConfig as schematic::Config>::Partial>,
    #[serde(skip_serializing_if = "Option::is_none")]
    c: Option<<NestedConfig as schematic::Config>::Partial>,
    #[serde(skip_serializing_if = "Option::is_none")]
    d: Option<Vec<<NestedConfig as schematic::Config>::Partial>>,
    #[serde(skip_serializing_if = "Option::is_none")]
    e: Option<Vec<<NestedConfig as schematic::Config>::Partial>>,
    #[serde(skip_serializing_if = "Option::is_none")]
    f: Option<HashMap<String, <CustomConfig as schematic::Config>::Partial>>,
}
