crates/core/tests/snapshots/container_type_test__partial_type__named_struct__supports_attributes.snap
---
source: crates/core/tests/container_type_test.rs
expression: pretty(container.impl_partial_type())
---
#[derive(Clone, Debug, Default, PartialEq, serde::Deserialize, serde::Serialize)]
#[serde(default, rename_all = "kebab-case")]
/// Container docs.
#[derive(Other)]
struct PartialExample {
    #[serde(rename = "aa", skip_serializing_if = "Option::is_none")]
    /// Field docs.
    #[serde(default)]
    pub a: Option<bool>,
    #[serde(alias = "bb", flatten, skip_serializing_if = "Option::is_none")]
    pub b: Option<HashMap<String, String>>,
    #[serde(skip)]
    pub c: Option<usize>,
    #[serde(skip_serializing, skip_deserializing)]
    pub d: Option<usize>,
    #[serde(skip_serializing_if = "is_zero")]
    pub e: Option<usize>,
    #[serde(rename(deserialize = "ff"), skip_serializing_if = "Option::is_none")]
    #[allow(dead_code)]
    #[deprecated]
    #[cfg(feature = "example")]
    pub f: Option<usize>,
}
