crates/core/tests/snapshots/container_type_test__partial_type__named_struct__supports_nested.snap
---
source: crates/core/tests/container_type_test.rs
expression: pretty(container.impl_partial_type())
---
#[derive(Clone, Debug, Default, PartialEq, serde::Deserialize, serde::Serialize)]
#[serde(default, deny_unknown_fields)]
struct PartialExample {
    #[serde(skip_serializing_if = "Option::is_none")]
    pub a: Option<<NestedConfig as schematic::Config>::Partial>,
    #[serde(skip_serializing_if = "Option::is_none")]
    pub b: Option<<CustomConfig as schematic::Config>::Partial>,
    #[serde(skip_serializing_if = "Option::is_none")]
    pub c: Option<<NestedConfig as schematic::Config>::Partial>,
    #[serde(skip_serializing_if = "Option::is_none")]
    pub d: Option<<CustomConfig as schematic::Config>::Partial>,
    #[serde(skip_serializing_if = "Option::is_none")]
    pub e: Option<Vec<<NestedConfig as schematic::Config>::Partial>>,
    #[serde(skip_serializing_if = "Option::is_none")]
    pub f: Option<HashMap<String, <CustomConfig as schematic::Config>::Partial>>,
    #[serde(skip_serializing_if = "Option::is_none")]
    pub g: Option<BTreeSet<<NestedConfig as schematic::Config>::Partial>>,
    #[serde(skip_serializing_if = "Option::is_none")]
    pub h: Option<<config::NestedConfig as schematic::Config>::Partial>,
}
