crates/core/tests/snapshots/container_type_test__partial_type__named_struct__supports_standard.snap
---
source: crates/core/tests/container_type_test.rs
expression: pretty(container.impl_partial_type())
---
#[derive(Clone, Debug, Default, PartialEq, serde::Deserialize, serde::Serialize)]
#[serde(default, deny_unknown_fields)]
struct PartialExample {
    #[serde(skip_serializing_if = "Option::is_none")]
    pub a: Option<bool>,
    #[serde(skip_serializing_if = "Option::is_none")]
    pub b: Option<usize>,
    #[serde(skip_serializing_if = "Option::is_none")]
    pub c: Option<String>,
    #[serde(skip_serializing_if = "Option::is_none")]
    pub d: Option<String>,
    #[serde(skip_serializing_if = "Option::is_none")]
    pub e: Option<Vec<String>>,
    #[serde(skip_serializing_if = "Option::is_none")]
    pub f: Option<HashMap<u8, String>>,
    #[serde(skip_serializing_if = "Option::is_none")]
    pub g: Option<String>,
    #[serde(skip_serializing_if = "Option::is_none")]
    pub h: Option<Vec<u8>>,
    #[serde(skip_serializing_if = "Option::is_none")]
    pub i: Option<std::collections::BTreeSet<u8>>,
}
